--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@ tbody tr td:first-child {
 	<h3>Oatmeal Cookies</h3>
 	<table class="table">
 		<tr><td><img class="img-fluid" src="https://www.kingarthurflour.com/sites/default/files/styles/featured_image/public/recipe_legacy/16-3-large.jpg?itok=I80vQAPs" alt="Cookies"></td><td><p>Oats are the star of this cookie, and rightly so. Featuring the nutty taste and nubbly texture of oats, these mildly spiced cookies are crunchy around the edges and invitingly soft in the center. Add raisins or not, your choice; they'll be a crowd favorite no matter what.</p>
+			<p>Ingredients: 
 			<ul >
       <li>4 tablespoons (57g) unsalted butter</li>
       <li>1/4 cup (50g) vegetable shortening</li>
@@ -54,7 +55,7 @@ tbody tr td:first-child {
       <li>3/4 cup (85g) King Arthur Unbleached All-Purpose Flour</li>
       <li>1 1/2 cups (142g) rolled oats, quick-cooking or old-fashioned</li>
       <li>1 cup (142g) golden raisins, optional; or Jammy Bits*</li>
-  </ul>
+  </ul></p>
 			<p><a href="https://www.kingarthurflour.com/recipes/oatmeal-cookies-recipe">Instructions</a></p>
 		</td></tr>
 	</table>
@@ -62,7 +63,7 @@ tbody tr td:first-child {
 	<h3>Morning Glory Muffins</h3>
 	<table class="table">
 		<tr><td><img class="img-fluid" src="https://www.kingarthurflour.com/sites/default/files/styles/featured_image/public/recipe_legacy/4801-3-large.jpg?itok=JtL20KfH" alt="Muffins"></td><td><p>This recipe, a throwback to the "back to the land" '60s, brings together all kinds of fruits and vegetables in an earthy whole-grain muffin that, despite the description, manages to taste very good indeed. Moist and just sweet enough, Morning Glory are a great "eat in the car" treat. They need the enhancement of neither butter nor jam (though either — or cream cheese — wouldn't be out of place).</p>
-			<p><ul class="list--bullets">
+			<p>Ingredients: <ul>
       <li>1/2 cup (71g) raisins or Jammy Bits, your favorite flavor*</li>
       <li>2 cups (227g) King Arthur White Whole Wheat Flour</li>
       <li>1 cup (213g) brown sugar, packed</li>
